--- a/index.html
+++ b/index.html
@@ -291,6 +291,9 @@
 
 
    <style>
+      .open-popup:hover{
+     cursor:pointer;
+   }
       .image-section {
          display: flex;
          justify-content: center;
