--- a/index.html
+++ b/index.html
@@ -51,42 +51,13 @@
 
 
                   <h3>Who am I?</h3>
-                  <p style="color: white;">
+                  <p style="color: #181628; font-size: 25px; width:150%">
                      My name is Amanuel, I'm a junior at TJHSST. I like photography and coding(hopefully you can see
                      that)
 
                   </p>
                </section>
             </li>
-            <!--
-            <li>
-               <section>
-
-                  <span><img src="https://t.ly/E0kQa" alt="" /></span>
-
-                  <h3>Build</h3>
-                  <p>
-                     We draw up digital transformation roadmaps that are
-                     consistent with market trends and in line with our
-                     clients’ business objectives and sustainability
-                     efforts/goals.
-                  </p>
-               </section>
-            </li>
-
-            <li>
-               <section>
-                  <span><img src="https://t.ly/2eZ0j" alt="" /></span>
-
-                  <h3>Run</h3>
-                  <p>
-                     We implement the strategies and processes defined,
-                     developing projects with the best competences and
-                     practices to ensure their success.
-                  </p>
-               </section>
-            </li>
--->
          </ul>
 
       </div>
@@ -208,6 +179,7 @@
          </clipPath>
       </symbol>
    </svg>
+   
    <div id="popup1" class="popup">
       <div class="popup-content">
          <span class="close" data-popup="popup1">&times;</span>
@@ -218,32 +190,34 @@
                alt="Image 2">
          </div>
          <p class="text-paragraph">
-            I want to include this work in my portfolio because it explores the concept of balance in chaotic and
-            structured forms. I think this piece demonstrates my understanding of visual harmony and contrast really
-            well.
+            • This piece shows the contrast between order and disorder using Scanography. I was inspired by how simple and useful binder clips are, so I used them to create a mix of symmetry and randomness. The ordered parts have clear patterns and careful arrangements, showing structure and harmony. On the other hand, the disordered parts come from placing the clips in unpredictable ways, adding chaos to the design.
+</br>
+ • The process was both relaxing and creative. Setting up the binder clips in patterns felt calming, while the random parts made it more exciting and fun. Using symmetry and patterns helped me show the balance between control and chance, which is a big idea in this piece.
+</br>
+ • This project also taught me new skills, like how to use a scanner, which I’m excited to use in other projects. Overall, "Disorder and Order" shows how I explored visual composition by balancing the calmness of structure with the excitement of chaos.
 
          </p>
       </div>
    </div>
+   
    <div id="popup2" class="popup">
       <div class="popup-content">
-         <span class="close" data-popup="popup1">&times;</span>
+         <span class="close" data-popup="popup2">&times;</span>
          <div class="image-section">
             <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366c17732b00746326909c.png"
                alt="Image 1">
-
          </div>
          <p class="text-paragraph">
-            I want to include this work in my portfolio because I really like the outdoors and it showcases my creative
-            skills really well.
-
-
+            • I want to include this work in my portfolio because I really like the outdoors and it showcases my creative
+            skills really well.</br>
+            • I started out by getting any image of camping as the backgroun. I then made an intersect combine between the amanuel and the background. Lastly, I created a replica of the background and made it black and white.
          </p>
       </div>
    </div>
+   
    <div id="popup3" class="popup">
       <div class="popup-content">
-         <span class="close" data-popup="popup1">&times;</span>
+         <span class="close" data-popup="popup3">&times;</span>
          <div class="image-section">
             <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366cb9732b000a42269f70.jpeg"
                alt="Image 1">
@@ -259,9 +233,11 @@
    </div>
    <div id="popup4" class="popup">
       <div class="popup-content">
-         <span class="close" data-popup="popup1">&times;</span>
+         <span class="close" data-popup="popup4">&times;</span>
          <div class="image-section">
             <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366d641e65b5da67f5652d.jpeg"
+               alt="Image 1">
+            <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/673cf5e71385f79aaf978ade.jpeg"
                alt="Image 1">
 
          </div>
@@ -274,7 +250,7 @@
    </div>
    <div id="popup5" class="popup">
       <div class="popup-content">
-         <span class="close" data-popup="popup1">&times;</span>
+         <span class="close" data-popup="popup5">&times;</span>
          <div class="image-section">
             <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366d64b6fe8e6a90fd2bf2.jpeg"
                alt="Image 1">
@@ -310,7 +286,8 @@
       }
 
       .text-paragraph {
-         text-align: center;
+        wdith: 50%
+         text-align: left;
          margin-top: 20px;
          font-size: 1.2em;
          color: #333;
@@ -386,22 +363,6 @@
       .font-kit-sans {
          font-family: Custome-Kit-Sans !important;
       }
-
-
-
-      /* 
-   * Looking for a frontend developer who can  
-   * realize ideas (like this one) into sleek, 
-   * responsive designs? I've a strong knowledge of 
-   * modern code and a keen eye for detail, a11y,
-   * optimization and performance.
-   *
-   * https://www.linkedin.com/in/fabriziocalderan/
-   * 
-   * This demo is an attempt to code a CSS-only replica 
-   * of the scroll effects on https://www.alpenite.com/en/
-   */
-
 
       *,
       *::before,
@@ -906,9 +867,6 @@
          }
       }
 
-
-
-
       /* show header on scrollup and hide on scrolldown  
    * original demo: https://codepen.io/fcalderan/pen/LYKwyyd
    */
@@ -970,33 +928,6 @@
             --translate: calc(-100% - 2px);
          }
       }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
       /* show warning */
 
