--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
             <li>
                <section>
 
-
+<img
+                           src="https://images.leadconnectorhq.com/image/f_webp/q_80/r_1200/u_https://assets.cdn.filesafe.space/8gqcjfyOUfE7qsDK1ZRL/media/6652738fabee1881bd93948e.png"
+                           loading="lazy">
                   <h3>Who am I?</h3>
                   <p style="color: #181628; font-size: 25px; width:150%">
-                     My name is Amanuel, I'm a junior at TJHSST. I like photography and coding(hopefully you can see
-                     that)
+                     Hi! My name is Amanuel, I was born in Ethiopia & came to the US at the age of 6. I'm a junior at TJHSST & I like to do a lot of things, mainly a lot of coding & design in my free time. I also like photography because it's an amazing way to capture a moment and it communicates a lot in just a single moment.
 
                   </p>
                </section>
