--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
          <p class="text-paragraph">
             • I want to include this work in my portfolio because I really like the outdoors and it showcases my creative
             skills really well.</br>
-            • I started out by getting any image of camping as the backgroun. I then made an intersect combine between the amanuel and the background. Lastly, I created a replica of the background and made it black and white.
+            • I started out by getting any image of camping as the background. I then made an intersect combine between my name and the background. Lastly, I created a replica of the background and made it black and white.
          </p>
       </div>
    </div>
@@ -227,7 +227,9 @@
          </div>
          <p class="text-paragraph">
             I want to include this work in my portfolio because my goal with this edit was to make it like it aged a lot
-            and it eroded.
+            and it eroded. The 2 images that I decided to work on what the skeleton and the skull. My goal was to make the images look a lot more creeper as they were orignially in the middle of the spectrum. The main edits that I made was decreasing the hue & contrast, and increasing the brightness, saturation, & lightness. I also inverted the colors of the skull image.
+
+
 
          </p>
       </div>
@@ -243,7 +245,7 @@
 
          </div>
          <p class="text-paragraph">
-            I want to include this work in my portfolio because it highlights my skill in composition and focal points.
+            I want to include this work in my portfolio because it highlights my skill in composition and focal points. The changes I made were first by increasing the color balance of yellow by 42. I also increased the hue while decreasing the lightness. And lastly decreased the vibrance to -100. Lastly, I inverted the color which creating the second photo.
 
 
          </p>
@@ -259,7 +261,7 @@
                alt="Image 2">
          </div>
          <p class="text-paragraph">
-            I want to include this work in my portfolio because I really like the POV that I chose and the edits I made.
+            I want to include this work in my portfolio because I really like the POV that I chose and the edits I made. I really liked the POVs that I chose for my subjects to edit because there is a lot light for me to control and edit. To be honest, the editing process was a bit random, but I really like the way it came out. The subjects were randomly chosen as well.
 
 
          </p>
