--- a/index.html
+++ b/index.html
@@ -143,6 +143,34 @@
                      </a>
                   </article>
                </li>
+               <li class="open-popup" data-popup="popup6">
+                <article itemscope itemtype="https://schema.org/Article">
+                   <div>
+                      <img
+                         src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366d64b6fe8e6a90fd2bf2.jpeg"
+                         loading="lazy">
+                   </div>
+                   <a target="_blank">
+                      <span itemprop="name" style="font-size: 2rem">
+                        Cityscapes
+                      </span>
+                   </a>
+                </article>
+            </li>
+            <li class="open-popup" data-popup="popup7">
+                <article itemscope itemtype="https://schema.org/Article">
+                   <div>
+                      <img
+                         src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366d64b6fe8e6a90fd2bf2.jpeg"
+                         loading="lazy">
+                   </div>
+                   <a target="_blank">
+                      <span itemprop="name" style="font-size: 2rem">
+                        Shadows Shoot
+                      </span>
+                   </a>
+                </article>
+             </li>
 
 
             </ul>
@@ -267,7 +295,38 @@
          </p>
       </div>
    </div>
+   <div id="popup6" class="popup">
+    <div class="popup-content">
+       <span class="close" data-popup="popup6">&times;</span>
+       <div class="image-section">
+          <img src="/sec-1.png"
+             alt="Image 1">
+          <img src="/sec-2.png"
+             alt="Image 2">
+       </div>
+       <p class="text-paragraph">
+          I want to include this work in my portfolio because I really like the POV that I chose and the edits I made. I really liked the POVs that I chose for my subjects to edit because there is a lot light for me to control and edit. To be honest, the editing process was a bit random, but I really like the way it came out. The subjects were randomly chosen as well.
 
+
+       </p>
+    </div>
+ </div>
+ <div id="popup7" class="popup">
+    <div class="popup-content">
+       <span class="close" data-popup="popup6">&times;</span>
+       <div class="image-section">
+          <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366d64b6fe8e6a90fd2bf2.jpeg"
+             alt="Image 1">
+          <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366d642fd9d484cbeab676.jpeg"
+             alt="Image 2">
+       </div>
+       <p class="text-paragraph">
+          I want to include this work in my portfolio because I really like the POV that I chose and the edits I made. I really liked the POVs that I chose for my subjects to edit because there is a lot light for me to control and edit. To be honest, the editing process was a bit random, but I really like the way it came out. The subjects were randomly chosen as well.
+
+
+       </p>
+    </div>
+ </div>
 
    <style>
       .open-popup:hover{
