--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@
     <div class="popup-content">
        <span class="close" data-popup="popup6">&times;</span>
        <div class="image-section">
-          <img src="/sec-1.png"
+          <img src="amanuelgb.github.io/amanuel.github.io/sec-1.png/sec-1.png"
              alt="Image 1">
-          <img src="/sec-2.png"
+          <img src="amanuelgb.github.io/amanuel.github.io/sec-1.png/sec-2.png"
              alt="Image 2">
        </div>
        <p class="text-paragraph">
