--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <article itemscope itemtype="https://schema.org/Article">
                    <div>
                       <img
-                         src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366d64b6fe8e6a90fd2bf2.jpeg"
+                         src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bcee6c46cc0b5b9e1880.png"
                          loading="lazy">
                    </div>
                    <a target="_blank">
@@ -161,7 +161,7 @@
                 <article itemscope itemtype="https://schema.org/Article">
                    <div>
                       <img
-                         src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366d64b6fe8e6a90fd2bf2.jpeg"
+                         src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bb50379294a35fe266ac.png"
                          loading="lazy">
                    </div>
                    <a target="_blank">
@@ -298,37 +298,115 @@
    <div id="popup6" class="popup">
     <div class="popup-content">
        <span class="close" data-popup="popup6">&times;</span>
-       <div class="image-section">
-          <img src="amanuelgb.github.io/amanuel.github.io/sec-1.png/sec-1.png"
-             alt="Image 1">
-          <img src="amanuelgb.github.io/amanuel.github.io/sec-1.png/sec-2.png"
-             alt="Image 2">
+       <p class="text-paragraph">Final Edits</p>
+       <div class="gallery-container">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bcee6c46cc0b5b9e1880.png" alt="Gallery image 1">
        </div>
-       <p class="text-paragraph">
-          I want to include this work in my portfolio because I really like the POV that I chose and the edits I made. I really liked the POVs that I chose for my subjects to edit because there is a lot light for me to control and edit. To be honest, the editing process was a bit random, but I really like the way it came out. The subjects were randomly chosen as well.
+       <p class="text-paragraph">Raw Photos</p>
+       <div class="gallery-container">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c2901870f46418422341.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c29082c9d8192cc002cc.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c2902790d690a17e7495.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c290e519ed1d7e238ab2.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c290e519ed2a37238ab1.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c290c5f22adf4da93ed1.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c2906c46cc1e499e1de8.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c290c5f22a7e9ca93ed0.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c2903792945a07e26d83.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5c290e519ed6e45238ab0.jpeg">
+      </div>
 
+        <h5>Project Overview</h5>
+        <p>
+          For this assignment, I created a digital cityscape using both photography and photo manipulation techniques. The project was divided into four phases: research & planning, a photoshoot, editing in Photopea, and final submission. I began by gathering inspiration and outlining my ideas. I then photographed my own cityscape using two lighting setups, ambient room light and an additional light source, capturing a total of 20+ images straight out of the camera. I selected the best images and edited them in Photopea, where I cropped to a 4:5 ratio, adjusted the color tones, and made three creative changes using several tutorials.
+        </p><h5>My Process</h5> <p>
+            I started by collecting reference images online to understand the aesthetics and mood of various cityscapes. During the photoshoot, I experimented with lighting and arrangement to bring depth and character to my scene. The editing process was where I had the most fun. I used Photopea to transform my raw photos into a more stylized and imaginative final product.
+          </p><h5>What I Learned</h5>
+          <p>
+            From this project, I learned how lighting can dramatically change the mood of a photograph. I also deepened my skills in Photopea, especially in using Generative Fill and learning how to apply color correction effectively. Most importantly, I learned how to plan and execute a creative vision from start to finish.
+          </p>
 
-       </p>
     </div>
  </div>
  <div id="popup7" class="popup">
     <div class="popup-content">
        <span class="close" data-popup="popup6">&times;</span>
-       <div class="image-section">
-          <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366d64b6fe8e6a90fd2bf2.jpeg"
-             alt="Image 1">
-          <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67366d642fd9d484cbeab676.jpeg"
-             alt="Image 2">
-       </div>
-       <p class="text-paragraph">
-          I want to include this work in my portfolio because I really like the POV that I chose and the edits I made. I really liked the POVs that I chose for my subjects to edit because there is a lot light for me to control and edit. To be honest, the editing process was a bit random, but I really like the way it came out. The subjects were randomly chosen as well.
-
-
-       </p>
+       <p class="text-paragraph">Final Edits</p>
+       <div class="gallery-container">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bb5013c4b637d90dd34d.png" alt="Gallery image 1">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bb50379294a35fe266ac.png" alt="Gallery image 2">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bb50aebc1a20e6b8e20d.png" alt="Gallery image 3">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bb502790d6451f7e677a.png" alt="Gallery image 4">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bb50e519edb836237e0d.png" alt="Gallery image 5">
+      </div>
+       <p class="text-paragraph">Raw Photos</p>
+       <div class="gallery-container">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc1870f4fc88422038.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc6c46ccdb839e1b25.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdcc5f22a1f94a93c63.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc4aaf2014bae78740.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdce519ed31cc238821.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc2790d61dfe7e71e0.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc1870f47e68422039.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdcaebc1a8438b8e5d7.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc6c46cc6e629e1b28.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdcc5f22a3007a93c64.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdce519edf7e0238825.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc37929445f0e26a99.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc82c9d8472bc0004e.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc2790d6206a7e71e1.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdcaebc1a198eb8e5da.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdce519edeaed238823.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc1870f4790742203a.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdcc5f22af54fa93c67.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc1870f41d7042203b.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdce519ed45a2238824.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc13c4b6cd340dd757.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdcaebc1aae24b8e5d8.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc3792943c51e26a9b.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc6c46cc50809e1b26.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc13c4b6259d0dd756.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc82c9d836d0c00050.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc82c9d83e98c0004f.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdce519edb870238822.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc4aaf201e2fe7873f.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc2790d621c37e71df.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdc3792940aa9e26a9a.jpeg">
+        <img src="https://storage.googleapis.com/msgsndr/8gqcjfyOUfE7qsDK1ZRL/media/67e5bfdce519edbd1d238826.jpeg">
+      </div>
+      <h5>Project Overview</h5>
+      <p>For this assignment, I explored creative shadow photography by shooting various objects that cast interesting and dramatic shadows. Working in a group setting, I used both classroom-provided materials and personal objects to stage unique compositions. I captured 30+ color photographs, focusing on how light interacts with shape and texture. After narrowing my images down to a strong selection of 30, I chose 5 to edit using Photopea, applying a variety of both basic and advanced editing techniques, and converting at least one to black and white.
+    </p><h5>My Process</h5> <p>I began by selecting and arranging objects, especially transparent or textured items, to create dynamic shadows against clean backgrounds. During the shoot, I experimented with angles, spacing, and light direction to maximize contrast and visual impact. Once I chose my strongest photos, I edited them in Photopea with a focus on clarity, mood, and detail. This included tonal adjustments, cleaning up distractions with content-aware tools, and exploring different contrast levels for black-and-white conversions.
+    </p><h5>What I Learned</h5>
+        <p>This project helped me better understand how lighting and composition influence the feeling of a photo. I also gained confidence in using Photopea non-destructively to bring out the textures and contrast in shadows. The most valuable takeaway was learning how to shift focus from the object itself to the abstract forms that light and shadow create.</p>
     </div>
  </div>
 
    <style>
+        .gallery-container {
+      overflow-x: auto;
+      white-space: nowrap;
+      padding: 20px;
+      background-color: #f0f0f0;
+    }
+
+    .gallery-container img {
+      width: 300px;
+      height: 200px;
+      object-fit: cover;
+      margin-right: 10px;
+      border-radius: 10px;
+      display: inline-block;
+    }
+
+    /* Optional: Hide scrollbar for a cleaner look */
+    .gallery-container::-webkit-scrollbar {
+      display: none;
+    }
+    .gallery-container {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
       .open-popup:hover{
      cursor:pointer;
    }
